Zalando new countries - DE+EN

--- a/docs/en-gb/modules/markets/pages/zalando.adoc
+++ b/docs/en-gb/modules/markets/pages/zalando.adoc
@@ -9,6 +9,22 @@
 
 Thanks to the Zalando partner programme, online sellers and manufacturers can use Zalando as an additional distribution channel for selling their high-quality products and take advantage of the well-known brand name Zalando.
 
+Your contract with Zalando determines the countries in which you can sell with Zalando. At the moment, orders from the following countries can be imported to plentymarkets:
+
+* Germany
+* Netherlands
+* France
+* Austria
+* Belgium
+* Finland
+* Ireland
+* Portugal
+* Slovakia
+* Slovenia
+* Lithuania
+* Latvia
+* Estonia
+
 [#200]
 == About automatic data exchange
 
