--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -10,6 +10,22 @@
 
 Durch das Zalando-Partnerprogramm können Online-Händler:innen und Hersteller:innen Zalando als zusätzlichen Absatzkanal für hochwertige Produkte nutzen und von der großen Markenbekanntheit von Zalando profitieren.
 
+In welchen Ländern du über Zalando verkaufen kannst, hängt von deinem Vertrag mit Zalando ab. Zurzeit können Aufträge aus den folgenden Ländern in plentymarkets importiert werden:
+
+* Deutschland
+* Belgien
+* Estland
+* Finnland
+* Frankreich
+* Irland
+* Lettland
+* Litauen
+* Niederlande
+* Österreich
+* Portugal
+* Slowakei
+* Slowenien
+
 [#200]
 == Informationen zum automatischen Datenaustausch
 
