text to speech update for pW version 0.2.6 DE

--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -159,7 +159,9 @@ Allgemeine Einstellungen vornehmen:
 
 | *Sprachausgabe*
 |image:warenwirtschaft:icon_speaker.png[width=24, height=24]
-|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält die Warnungen und Bestätigungshinweisen, die innerhalb von plentyWarehouse in Texform erscheinen, als gesprochenen Text, der über das Gerät wiedergegeben wird. Je nach Andwendungsfall kann dies für dein Lagerpersonal nützlich sein.
+|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält Warnungen, Anweisungen und Bestätigungshinweise. Je nach Andwendungsfall kann dies für dein Lagerpersonal nützlich sein. +
+Über die Einstellung *Information zum Artikel* legst du je nach deinen Anforderungen fest, welche Artikelinformationen in der Sprachausgabe enthalten sein sollen. Wenn du diese Einstellung nicht anpasst, ist standardmäßig die Option *Variantennummer* vorausgewählt. Wähle alternativ eine der Optionen *Artikelname*, *Variantenname* oder *Varianten-ID* aus. Sollen keine Artikelinformationen ausgegeben werden, wähle die Option *Keine Auswahl*. +
+*_Hinweis:_* Diese Einstellung greift für die Sprachausgabe aller Funktionen von plentyWarehouse.
 
 | [#intable-other-settings]*Sonstiges* 
 |icon:settings[set=material]
