change wording DE / add translation

--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -159,7 +159,7 @@ Allgemeine Einstellungen vornehmen:
 
 | *Sprachausgabe*
 |image:warenwirtschaft:icon_speaker.png[width=24, height=24]
-|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält Warnungen, Anweisungen und Bestätigungshinweise. Je nach Andwendungsfall kann dies für dein Lagerpersonal nützlich sein. +
+|Aktiviere (icon:toggle-on[role="green"]) diese Option, um während der Nutzung der Funktionen von plentyWarehouse eine zusätzliche Sprachausgabe zu erhalten. Die Sprachausgabe enthält Warnungen, Anweisungen und Bestätigungshinweise. Je nach Ablauf und Anwendungsfall kann dies eine nützliche Hilfe für dein Lagerpersonal sein. +
 Über die Einstellung *Information zum Artikel* legst du je nach deinen Anforderungen fest, welche Artikelinformationen in der Sprachausgabe enthalten sein sollen. Wenn du diese Einstellung nicht anpasst, ist standardmäßig die Option *Variantennummer* vorausgewählt. Wähle alternativ eine der Optionen *Artikelname*, *Variantenname* oder *Varianten-ID* aus. Sollen keine Artikelinformationen ausgegeben werden, wähle die Option *Keine Auswahl*. +
 *_Hinweis:_* Diese Einstellung greift für die Sprachausgabe aller Funktionen von plentyWarehouse.
 
