--- a/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
+++ b/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
@@ -46,7 +46,7 @@ Logging into plentyWarehouse:
 [[table-pw-login]]
 .Input fields for the login
 [cols="1,3"]
-|====
+|===
 |Setting |Explanation
 | *plentyID*
 |Enter the ID of the plentymarkets system whose stock you want to manage with plentyWarehouse.
@@ -56,7 +56,7 @@ Logging into plentyWarehouse:
 
 | *Password*
 |Enter the password for your account.
-|====
+|===
 
 [#400]
 == Your plentyWarehouse dashboard
@@ -72,8 +72,8 @@ You can change the order of the dashboard areas according to your wishes. To do 
 [[table-pw-dashboard]]
 .Areas on the dashboard
 [cols="2,1,6"]
-|====
-|Availability |Symbol |Explanation
+|===
+|Area |Symbol |Explanation
 
 | *General information*
 |icon:person[set=material]
@@ -89,9 +89,9 @@ a|This area contains tiles with symbols that represent the individual functions 
 
 * icon:sync_alt[set=material] xref:stock-management:redistributing-items.adoc#[Redistributing items]
 
-* image:stock-management:icon_reshelving.png[width=24, height=24] xref:stock-management:reshelving-items.adoc#[Reshelving items]
+* image:stock-management:icon_reshelving.png[width=24, height=24]) xref:stock-management:reshelving-items.adoc#[Reshelving items]
 
-* image:stock-management:icon_stocktaking.png[width=24, height=24] xref:stock-management:carrying-out-stocktaking.adoc#[Stocktaking]
+* image:stock-management:icon_stocktaking.png[width=24, height=24]) xref:stock-management:carrying-out-stocktaking.adoc#[Stocktaking]
 
 * image:stock-management:icon_pick-lists.png[width=24, height=24]
 xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
@@ -101,7 +101,7 @@ Tap on a tile for quick access to the respective function. Once you have used th
 | *Last activities*
 |icon:history[set=material]
 |To facilitate the overview, this area displays a list of activities that you have carried out in plentyWarehouse since the last login. For example, this enables you to see how many items have been found as a result of the latest item search or how many items were included in the latest redistribution.
-|====
+|===
 
 In addition, the dashboard offers you a way to access further settings and to open the complete list of functions included in plentyWarehouse. To do so, tap on the menu icon (icon:bars[role="darkGrey"]) in the top left corner.
 
@@ -145,7 +145,7 @@ Carrying out general settings:
 [[table-pw-general-settings]]
 .General settings in plentyWarehouse
 [cols="2,1,6"]
-|====
+|===
 |Setting |Symbol |Explanation
 
 | *Display*
@@ -159,7 +159,9 @@ Carrying out general settings:
 
 | *Text to speech*
 |image:stock-management:icon_speaker.png[width=24, height=24]
-|Activate (icon:toggle-on[role="green"]) this option so that the app provides additional spoken instructions while using the functions of plentyWarehouse. The text to speech functionality contains the warnings and confirmation messages that are displayed as texts within plentyWarehouse as a form of spoken text, which is then played by your device. Depending on the workflow, this can be useful for your warehouse staff.
+|Activate (icon:toggle-on[role="green"]) this option so that the app provides additional spoken instructions while using the functions of plentyWarehouse. The text to speech functionality contains warnings, instructions and confirmation messages. Depending on the workflow or the use case, this can be useful help for your warehouse staff. +
+To adjust the text to speech function to your requirements, use the setting *Item information* to determine which item information should be included in the text to speech output. If you do not adjust this setting, the option *Variation number* is preselected by default. Alternatively, select one of the options *Item name*, *Variation name* or *Variation ID*. If no item information should be included in the text to speech output, select the option *No selection*. +
+*_Note:_* This setting takes effect for the text to speech output of all plentyWarehouse functions.
 
 | [#intable-other-settings]*Other*
 |icon:settings[set=material]
@@ -169,7 +171,7 @@ Carrying out general settings:
 *Leave*: If you select this option, you will not be forwarded back to the previous function after finishing working with the function you entered by tapping on the shortcut. +
 
 *Use device camera for scanning*: Are you using the plentyWarehouse app on an Android smartphone? This setting allows you to use the built-in camera of the device to scan barcodes and QR codes. If this option is activated, the scanner icon (image:stock-management:icon_barcode.png[width=24, height=24]) is displayed at the upper margin of the screen while you are using functions that require scanning codes. Tap on this symbol to open the camera and start the scanning process.
-|====
+|===
 
 [#550]
 == Viewing app information
