fix: table formatting

--- a/docs/de-de/modules/changelog/pages/2022-05-18.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-05-18.adoc
@@ -172,7 +172,7 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |1.12.6
 |-
 
-|link:https://marketplace.plentymarkets.com/googletagmanagerultimate_54789[Google Tag Manager + Conversions API | 18 Tools in einem^]
+|link:https://marketplace.plentymarkets.com/googletagmanagerultimate_54789[Google Tag Manager + Conversions API - 18 Tools in einem^]
 |1.2.9
 a| * Der link:https://felixri.es/gtmconfig[Konfigurator^] muss erneut durchlaufen werden
 * Nutze beim Import im Google Tag Manager die Option "Zusammenführen", wenn du eigene Anpassungen an der Konfiguration vorgenommen hast
