--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -86,11 +86,18 @@ Bei neuen Systemen sind Standardstatus eingestellt, z.B. für Retouren der Statu
 Die Grundeinstellungen des Menüs *Einrichtung » Aufträge » Einstellungen* müssen bei Inbetriebnahme des Systems gespeichert werden, damit die Einstellungen wirksam sind. Speichere daher die Einstellungen auch, wenn du sie nicht verändert hast, also die Standardkonfiguration verwenden möchtest.
 ====
 
+[TIP]
+.Ansichten für Benutzer:innen freigeben
+====
+Wenn eine Benutzer:in in deinem plentymarkets System die verfügbaren Vorlagen nicht sehen kann, musst du ggf. die Ansicht im entsprechenden Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* » Bereich: *Ansichten* freischalten. Beachte dazu die Erläuterungen auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#ansichten-freigeben-andere-benutzer[Vorbereitende Einstellungen vornehmen].
+====
+
 [WARNING]
 .Wichtig: Benutzer-Login
 ====
 Wenn du in diesem Menü Änderungen vornimmst, werden andere Benutzer:innen automatisch ausgeloggt und müssen sich neu einloggen, damit die Änderungen auch für diese Benutzerprofile greifen. Kündige Änderungen daher ggf. weiteren Benutzer:innen an.
 ====
+
 
 ////
 Buchhaltung - anpassen auf neue UI
@@ -152,16 +159,23 @@ include::{includedir}/_header.adoc[]
 
 Die Detailansicht eines Auftrags enthält alle relevanten Auftragsinformationen. Diese Informationen sind thematisch in Portlets angeordnet. Über die MyView Funktionalität kannst du die Portlets selbst und auch ihre Anordnung in der Detailansicht individuell einrichten. Das bedeutet, dass du selbst bestimmen kannst, welche Auftragsinformationen und damit verbundene Funktionen für dich am wichtigsten sind. Gestalte deine Auftragsbearbeitung effizienter, indem du dir eigene Ansichten einrichtest. Wie du dabei vorgehst, wird auf dieser Seite erklärt.
 
+Seitennavigation:
+Über Icon 3 Striche lässt sich die Seitennavigation links auf- und zuklappen. Wenn sie geöffnet ist, wird der ausgewählte Auftrag mit Icon Warenkorb davor in blauer Schrift angezeigt. Darunter stehen in schwarzer Schrift die Portlets, zunächst mit den Standardtiteln. 
+
 // TODO: MyView als Include einfügen
 
 [#customise-ui]
 == Benutzeroberfläche anpassen
 
 Du öffnest die Detailansicht eines Auftrags von der Auftragsübersicht aus. Gehe ins Menü *Aufträge » Aufträge [Testphase]* und <<LINK#, suche den Auftrag>>, den du öffnen und bearbeiten möchtest.
-Wenn du noch keine eigene Ansicht erstellt hast, wird der Auftrag mit der Standardansicht geöffnet. Du kannst die Standardansicht nutzen, um den Auftrag zu bearbeiten. Wenn du die Detailansicht individuell anpassen möchtest, kannst du eine eigene Ansicht erstellen. In den folgenden Kapiteln wird dir erklärt, wie du dafür vorgehst.
+Wenn du noch keine eigene Ansicht erstellt hast, wird der Auftrag mit der Standardansicht geöffnet. Du kannst die Standardansicht nutzen, um den Auftrag zu bearbeiten. Wenn du die Detailansicht individuell anpassen möchtest, kannst du eine eigene Ansicht erstellen. In den folgenden Kapiteln wird dir erklärt, was als Standard hinterlegt ist und wie du vorgehst, um die Ansicht zu individualisieren.
 
-== Standardansicht
-// TODO: dazu gilt grundeinstellungen
+Natürlich kannst du diese Standardansichten jederzeit nach deinen Wünschen <<#ansicht-bearbeiten, anpassen>> und einzelne Felder ergänzen oder entfernen oder eine <<#ansicht-bearbeiten, neue Ansicht erstellen>>.
+
+
+== Standardansicht Einstellungen für Aufträge
+// TODO: dazu gilt grundeinstellungen; Jede Einstellung kann über Dropdown ausgewählt werden.
+
 [[standard-view]]
 .Ansicht: Standard
 [cols="1,3"]
@@ -169,79 +183,78 @@ Wenn du noch keine eigene Ansicht erstellt hast, wird der Auftrag mit der Standa
 |Einstellung |Erläuterung
 
 | *Standard-Auftragsherkunft*
-|Die Standardeinstellung ist Manuelle Eingabe [0]
+|Die Standardeinstellung ist Manuelle Eingabe [0] +
 
 | *Standard-Status Retoure*
-|Die Standardeinstellung ist 9 | Retoure
+|Die Standardeinstellung ist *9 Retoure*
 
 | *Standard-Status Gutschrift*
-|Die Standardeinstellung ist 11 | Gutschrift
+|Die Standardeinstellung ist *11 Gutschrift*
 
 | *Standard-Status Reparatur*
-|Die Standardeinstellung ist 12 | Reparatur
+|Die Standardeinstellung ist *12 Reparatur*
 
 | *Standard-Status Sammelauftrag*
-|Die Standardeinstellung ist 13 | Sammelauftrag
+|Die Standardeinstellung ist *13 Sammelauftrag*
 
 | *Standard-Status Sammelgutschrift*
-|Die Standardeinstellung ist 14 | Sammelgutschrift
+|Die Standardeinstellung ist *14 Sammelgutschrift*
 
 | *Standard-Status Rückbuchung*
-|Die Standardeinstellung ist Letzer Status
+|Die Standardeinstellung ist *Letzter Status*
 
 | *Status stornierter Aufträge* (Keine Reservierung von Beständen)
-|Die Standardeinstellung ist von 8 | storniert bis 8 | storniert
+|Die Standardeinstellung ist von *8 storniert* bis *8 storniert*
 
 | *Status Auftragsreservierung* (Reservierung von Beständen)
-|Die Standardeinstellung ist
+|Die Standardeinstellung ist von *3.2 in Warteposition* bis *7.1 Auftrag exportiert*, *Alle Aufträge*
 
 | *Versandkosten in Gewährleistung übernehmen*
-|Die Standardeinstellung ist Nein.
+|Die Standardeinstellung ist *Nein*.
 
 | *Versandkosten in Gutschrift übernehmen*
-|Die Standardeinstellung ist Ja.
+|Die Standardeinstellung ist *Ja*.
 
 | *In Auftrag/Auftragsübersicht anzeigen*
-|Die Standardeinstellung ist Rechnungsadresse
+|Die Standardeinstellung ist *Rechnungsadresse*.
 
 | *Artikelpreis-Darstellung*
-|Die Standardeinstellung ist Brutto.
+|Die Standardeinstellung ist *Brutto*.
 
 | *Zuordnung des Lagers*
-|Die Standardeinstellung ist b) pro Artikelposition kann ein Lager zugeordnet werden.
+|Die Standardeinstellung ist *b) pro Artikelposition kann ein Lager zugeordnet werden*.
 
 | *Automatische Lagerauswahl*
-|Die Standardeinstellung ist c) in Abhängigkeit des höchsten Warenbestandes.
+|Die Standardeinstellung ist *c) in Abhängigkeit des höchsten Warenbestandes*.
 
 | *Anzahlung auf Produktionsware*
-|Die Standardeinstellung ist keine Anzahlung anbieten.
+|Die Standardeinstellung ist *keine Anzahlung anbieten*.
 
 | *Mengenänderung von Bundle-Artikel und Bundle-Bestandteile erlauben*
-|Die Standardeinstellung ist Nein.
+|Die Standardeinstellung ist *Nein*.
 
 | *Statuswechsel auf 4 statt 5, wenn Warenbestand fehlt*
-|Die Standardeinstellung ist Ja.
+|Die Standardeinstellung ist *Ja*.
 
 | *Betroffener Statusbereiche im Status 4.x. Zusätzlich ist Status 3.2 betroffen*
-|Die Standardeinstellung ist von 4 | in Versandvorbereitung bis 4 |.
+|Die Standardeinstellung ist von *4 in Versandvorbereitung* bis *4 in Versandvorbereitung*.
 
 | *Inaktive Plugin-Zahlungsarten anzeigen*
-|Die Standardeinstellung ist Ja.
+|Die Standardeinstellung ist *Ja*.
 
 | *Verhalten der Versandkosten beim Teilen von Aufträgen*
-|Die Standardeinstellung ist Versandkosten in beiden Aufträgen ermitteln (Standardverhalten).
+|Die Standardeinstellung ist *Versandkosten in beiden Aufträgen ermitteln (Standardverhalten)*.
 
 | *Verhalten des Orginalauftrags nach dem Teilen*
-|Die Standardeinstellung ist Originalauftrag löschen (Standardverhalten).
+|Die Standardeinstellung ist *Originalauftrag löschen (Standardverhalten)*.
 
 | *Auftragsnotizen in Teilaufträge übernehmen*
-|Die Standardeinstellung ist Nein.
+|Die Standardeinstellung ist *Nein*.
 
 | *Verhalten der Originalaufträge nach dem Gruppieren*
-|Die Standardeinstellung ist Originalaufträge löschen (Standardverhalten).
+|Die Standardeinstellung ist *Originalaufträge löschen (Standardverhalten)*.
 
-Präfixe ?
-
+Präfixe erklären ?
 |====
 
 [#create-new-view]
@@ -312,7 +325,8 @@ Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach h
 
 // TODO: struktur
 Portlets
-Einleitung
+siehe Detailansicht Gestaltung bei Artikel
+Auf der neuen Aufträge UI sind die Informationen in Portlets aufgeteilt.
 
 [#individual-portlets]
 === Eigene Portlets
@@ -322,7 +336,7 @@ Das eigene Portlet unterscheidet sich von den vorgefertigten Portlets in zwei wi
 * kann beliebig oft hinzugefügt werden.
 * enthält alle Artikeldatenfelder und nicht nur eine Teilmenge, wie es bei den vorgefertigten Portlets der Fall ist.
 
-Dank eigener Portlets bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Portlet enthalten soll.
+Dank eigener Portlets bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Portlet enthalten soll. Du kannst die Portlets zudem anders benennen. In der Seitennavigation
 
 [discrete]
 ==== Anwendungsbeispiel
@@ -336,21 +350,33 @@ Stell dir vor, du bist mit der Standardanordnung der globalen Einstellungen nich
 image::artikel/neue-ui/assets/detailansicht-eigene-portlets.png[]
 // TODO: image
 
+
+=== Verfügbare Portlets und Datenfelder
+
+// TODO: Einleitung - Auftragstypen später im Text
+Über den Portlets eines geöffneten Auftrags sind die Icons Speichern, Sperren/Entsperren, Warenkorb Aufträge erstellen, Trichter Auftrag teilen.
+
+Folgende Auftragstypen lassen sich an dieser Stelle anlegen:
+Gewährleistung: Für alle Positionen, Für bestimmte Positionen
+Gutschrift: Für alle Positionen, Für bestimmte Positionen
+Lieferauftrag: Automatisch aufteilen, Für bestimmte Positionen
+Retoure: Für bestimmte Positionen
+
 ////
-einfügen 1.5 Bearbeitung abschließen ?
-Erklärung für Speicherlogik nutzbar
+nicht alle Portlets werden initial mit Daten geladen (Datenlast reduzieren) - nachfragen
+https://knowledge.plentymarkets.com/de-de/manual/main/crm/kontakt-bearbeiten.html#erlaeuterungen-einzelne-bereiche
 ////
 
-=== Portlets Standard
+==== Portlet *Übersicht*
+
+[#portlet-overview]
+Im Portlet *Übersicht* siehst du alle Informationen zur Menge der Artikel und Kosten.
 
 [[table-portlets]]
-.Portlet: Erklärung
+.Portlet: Übersicht
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
-
-[#portlet-overview]
-Im Portlet *Übersicht* siehst du...
 
 | *Warenwert netto*
 | Der Warenwert netto wird angezeigt.
@@ -365,10 +391,12 @@ Im Portlet *Übersicht* siehst du...
 | Die Mehrwertsteuer wird in Euro angezeigt.
 
 | *Artikelmenge*
-| Die Anzahl der Artikel wird angezeigt
+| Die Anzahl der Artikel wird angezeigt. +
+Der grüne Strich links bedeutet...
 
 | *Steuerfreier Betrag*
 | Der Steuerfreie Betrag wird angezeigt.
+|====
 
 
 [#portlet-status-tags]
@@ -555,6 +583,132 @@ Absender der Zahlung
 Eingangsdatum
 Importiert
 Aktion
+
+
+[#portlet-order-referrer]
+Im Portlet *Auftragsreferenzen* siehst du...
+Über Icon Zahnrad Spalten konfigurieren
+
+| *Beziehung*
+|Wähle
+
+| *ID*
+|Wähle
+
+| *Typ*
+|Wähle
+
+| *Dokument*
+|Wähle
+
+| *Status*
+|Wähle
+
+| *Erstellt*
+|Wähle
+
+| *Betrag*
+|Wähle
+
+| *Zahlungsart*
+|Wähle
+
+| *Rechnungsadresse*
+|Wähle
+
+| *Lieferadresse*
+|Wähle
+
+
+[#portlet-order-properties]
+Im Portlet *Eigenschaften* siehst du...
+Über Icon Zahnrad Spalten konfigurieren
+
+| *Typ-ID*
+|Die Typ-ID wird angezeigt.
+
+| *Name*
+|Wähle
+
+| *Wert*
+|Der ? wird angezeigt.
+
+| *Erstellungsdatum*
+|Das Erstellungsdatum mit Uhrzeit wird angezeigt.
+
+| *Letze Änderung*
+|Das Datum der letzten Änderung wird mit Uhrzeit angezeigt.
+
+
+[#portlet-documents]
+Im Portlet *Dokument* siehst du...
+Über Icon Zahnrad Spalten konfigurieren
+
+| *Alle Dokumente*
+|Im Ordner *Alle Dokumente* finden sich: je Symbol davor
+Rechnung
+Externe Rechnung
+Lieferschein
+Mahnschreiben
+Bestellbestätigungen
+Storno Mahnschreiben
+Gelangensbetätigung
+proformarechnung
+Stornobelegt Rechung
+Abhollieferung
+Rücksendeschein
+
+| *Archivierte Dokumente*
+|Im Ordner *Archivierte Dokumente* finden sich: 
+Lieferschein
+Bestellbestätigung
+Gelangensbestätigung
+Proformarechnung
+Abhollieferung
+Rücksendeschein
+
+Über Symbol Trichter öffnet sich Pop-up Fenster
+Erstellt am Symbol Kalender
+Aktualisiert am Symbol Kalender
+Datum anzeigen am Symbol Kalender
+Über Suchen kann Suche ausgeführt werden
+
+Über Symbol + kannst du ein neues Dokument erstellen
+* Rechnung 
+* Lieferschein
+* Bestellbestätigung
+* Abhollieferung
+* Rücksendeschein
+* Proformarechnung
+Über das Icon hochladen: Externes Dokument hochladen
+// TODO: siehe dazu auftragsdokumente.adoc
+
+| *Name*
+|Wähle
+
+| *Nummer*
+|Wähle
+
+| *Typ*
+|Wähle
+
+| *Referenz*
+|Wähle
+
+| *Lager*
+|Wähle
+
+| *Eigner*
+|Wähle
+
+| *Letzte Änderung*
+|Wähle
+
+| *Datum anzeigen*
+|Wähle
+
+| *Aktionen*
+|Wähle
 
 |====
 
