zalando fulfillment options DE+EN

--- a/docs/en-gb/modules/markets/pages/zalando.adoc
+++ b/docs/en-gb/modules/markets/pages/zalando.adoc
@@ -11,6 +11,8 @@ Thanks to the Zalando partner programme, online sellers and manufacturers can us
 
 Your contract with Zalando determines the countries in which you can sell with Zalando. At the moment, orders from the following countries can be imported to plentymarkets:
 
+*_Important:_* At the moment, you can only ship items yourself (i.e. what Zalando calls Partner fulfillment/own logistics). Zalando Fulfillment Solutions (ZFS) is not currently supported.
+
 * Germany
 * Netherlands
 * France
