Payment methods - DE

--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -298,7 +298,7 @@ Hersteller verknüpfen:
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
 [#900]
-== Zahlungsart aktivieren
+== Zahlungsart in Kundenklasse erlauben
 
 :market: Cdiscount
 :payment-method: Cdiscount
