--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -1338,7 +1338,7 @@ Rahmenbedingungen importieren:
 |====
 
 [#2250]
-== Zahlungsart aktivieren
+== Zahlungsart in Kundenklasse erlauben
 
 Die Zahlungsart eBay-Rechnungskauf ist für eine Preisspanne von 1,50 EUR bis 1,500 EUR möglich und gilt für alle Kategorien außer für digitale Güter. Um eBay-Rechnungskauf nutzen zu können, muss der Artikel mit PayPal bezahlbar sein.
 
