--- a/docs/de-de/modules/maerkte/pages/neckermann-at-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/neckermann-at-einrichten.adoc
@@ -610,7 +610,7 @@ Merkmal Produktdatenblatt mit Artikel verknüpfen:
 --
 
 [#1600]
-== Zahlungsart aktivieren
+== Zahlungsart in Kundenklasse erlauben
 
 :market: Neckermann.at
 :payment-method: Neckermann Payment
