--- a/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
+++ b/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
@@ -164,7 +164,7 @@ Verkaufspreis für Netto Marken-Discount festlegen:
 include::partial$shipping-profile-activate.adoc[]
 
 [#400]
-=== Zahlungsart aktivieren
+=== Zahlungsart in Kundenklasse erlauben
 
 :market: Netto Marken-Discount
 :payment-method: Netto
