--- a/docs/de-de/modules/maerkte/pages/shopgate.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopgate.adoc
@@ -227,7 +227,7 @@ include::partial$verkaufspreis-festlegen.adoc[]
 include::partial$activate-characteristic.adoc[]
 
 [#600]
-== Zahlungsart aktivieren
+== Zahlungsart in Kundenklasse erlauben
 
 :market: Shopgate
 :payment-method: Shopgate Payment
