--- a/docs/de-de/modules/maerkte/pages/yatego.adoc
+++ b/docs/de-de/modules/maerkte/pages/yatego.adoc
@@ -252,7 +252,7 @@ Die Versandbestätigung wird nicht automatisch an Yatego gesendet. Der Auftrag m
 ////
 
 [#900]
-== Zahlungsart aktivieren
+== Zahlungsart in Kundenklasse erlauben
 
 :market: Yatego
 :payment-method: Yatego Rechnung
