--- a/docs/de-de/modules/maerkte/partials/_galeria.adoc
+++ b/docs/de-de/modules/maerkte/partials/_galeria.adoc
@@ -117,7 +117,7 @@ include::partial$assistant-basic-instructions.adoc[]
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
 [#600]
-== Zahlungsart aktivieren
+== Zahlungsart in Kundenklasse erlauben
 
 Kund:innen zahlen an GALERIA. Deshalb werden alle Aufträge mit dem Status *[5] Bezahlt* und der Zahlungsart *GALERIA* importiert.
 
