--- a/docs/de-de/modules/maerkte/partials/zahlungsart_aktivieren.adoc
+++ b/docs/de-de/modules/maerkte/partials/zahlungsart_aktivieren.adoc
@@ -1,4 +1,16 @@
-Sobald ein aktives Konto für {market} existiert, ist die Zahlungsart *{payment-method}* automatisch im System verfügbar. Es sind keine eigenen Konfigurationen dafür notwendig. Du muss nur noch die Zahlungsart in einer oder mehreren Kundenklassen erlauben.
+Sobald ein aktives Konto für {market} existiert, ist die Zahlungsart *{payment-method}* automatisch im System verfügbar. Es sind keine eigenen Konfigurationen dafür notwendig. Du musst nur noch die Zahlungsart in einer oder mehreren Kundenklassen erlauben.
+
+[.collapseBox]
+.Was ist eine Kundenklasse?
+--
+Kundenklassen ermöglichen es dir, deinen Kundenstamm nach verschiedenen Kriterien zu unterteilen. Anwendungsbeispiele für Kundenklassen sind:
+
+* Erstelle zwei verschiedene Kundenklassen für Endkund:innen (B2C) und Händler:innen (B2B). Je nach Kundenklasse werden die Artikel im plentyShop mit Bruttopreisen oder mit Nettopreisen angezeigt.
+* Lege Rabatte nur für bestimmte Kundenklassen fest.
+
+Weitere Informationen zu Kundenklassen findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kontakte].
+
+--
 
 //tag::mop-customer-class[]
 [.instruction]
