--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1315,7 +1315,7 @@ Element kopieren:
 . Öffne den Bearbeitungsmodus des Bereichs (icon:pencil[role="blue"]).
 . Bewege den Mauszeiger auf das Element, das du kopieren möchtest.
 . Klicke auf *Kopieren* (icon:content_copy[set=material, role="blue"]).
-. Klicke an der rechten oberen Ecke des Bereichs auf *Einfügen* (icon:content_paste[set=material, role="blue"]).
+. Klicke an der rechten oberen Ecke des Bereichs auf *Einfügen* (icon:content_paste[set=material, role="blue"]). +
 → Das Element wird eingefügt.
 . Bewege den Mauszeiger auf das eingefügte Element und klicke auf *Bearbeiten* (icon:pencil[role="blue"]), um die Einstellungen des Elements zu ändern.
 . *Speichere* (icon:save[set=plenty]) die Einstellungen.
